k8s/postgres-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-db
  name: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/cabbage: "true"
        io.kompose.service: postgres-db
    spec:
      containers:
        - args:
            - -p
            - "5434"
          image: postgres:16-alpine
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - pg_isready -d postgres -U postgres -p 5434
            failureThreshold: 3
            periodSeconds: 5
            timeoutSeconds: 20
          name: postgres-db
          ports:
            - containerPort: 5434
          resources: {}
      restartPolicy: Always
status: {}
