k8s/cabbage-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: cabbage
  name: cabbage
spec:
  type: LoadBalancer
  ports:
    - port: 80
      nodePort: 31280
      targetPort: 80
  externalIPs:
    - "34.74.203.201"
  selector:
    io.kompose.service: cabbage
