k8s/postgres-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-db
  name: postgres-db
spec:
  ports:
    - name: "5434"
      port: 5434
      targetPort: 5434
  selector:
    io.kompose.service: postgres-db
status:
  loadBalancer: {}
